# Wallace

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/skills/: merge-order-data.md  organize-docs.md
.claude/skills/scripts/: merge_order.py
.github/ISSUE_TEMPLATE/: config.yml  feature.md  learning-task.md
.github/workflows/: server-test.yml
doc/: embedded-learning-roadmap.md  spec.md  wallace-v3.md  wallace-v4.1.md  wallace-v4.2-purchase-list-checked.md  wallace-v4.2-purchase-list.md  电子器件分类汇总.md
doc/archive/: wallace-v1.md  wallace-v2.md  wallace-v4.1-purchase-list.md  wallace-v4.2-purchase-list.md  wallace-v4.md
server/: README.md  architecture.md  pyproject.toml
server/config/: default.toml
server/tests/: conftest.py
server/tests/e2e/: conftest.py  test_conversation.py  test_events.py  test_interrupt.py  test_memory.py  test_reconnect.py  test_sensor_care.py  test_wakeword.py  test_ws_e2e.py
server/tests/fixtures/: memory_sample.json  test_config.toml
server/tests/integration/: test_care_push.py  test_orchestrator.py  test_ws_handler.py
server/tests/unit/: test_asr.py  test_care.py  test_config.py  test_emotion.py  test_llm.py  test_memory.py  test_mqtt.py  test_protocol.py  test_sensor.py  test_session.py  test_tts.py  test_wakeword.py
server/wallace/: app.py  config.py  emotion.py  sensor.py  vision.py  wakeword.py
server/wallace/care/: scheduler.py
server/wallace/memory/: store.py
server/wallace/pipeline/: asr.py  llm.py  orchestrator.py  tts.py
server/wallace/smarthome/: mqtt.py
server/wallace/ws/: handler.py  protocol.py  session.py
