[project]
name = "wallace-server"
version = "0.1.0"
description = "Wallace AI robot PC server"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "faster-whisper>=1.0",
    "ctranslate2>=4.0,<4.5",  # 4.5+ has ROCm DLL bug on Windows
    "httpx>=0.27",
    "edge-tts>=6.1",
    "miniaudio>=1.59",
    "pydantic-settings>=2.2",
    "tomli>=2.0; python_version < '3.11'",
    "aiomqtt>=2.0",
    "apscheduler>=3.10,<4.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
wakeword = [
    "openwakeword>=0.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "pytest-timeout>=2.3",
    "freezegun>=1.4",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wallace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring external services (skipped in CI)",
    "e2e_mock: end-to-end tests with mocked services (CI-safe)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.coverage.run]
source = ["wallace"]

[tool.coverage.report]
fail_under = 80
show_missing = true
